app-dep/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: trythat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 248189943460.dkr.ecr.us-east-1.amazonaws.com/backend:11-20250708115217
          ports:
            - containerPort: 8000
