app-dep/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: trythat-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
