app-dep/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-app-dep-on-eks
spec:
  rules:
  - host: "app.trythat.aribadevops.site"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80

  - host: "bknd.trythat.aribadevops.site"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000

  - host: "trythat.aribadevops.site"
    http:
      paths:
      - path: "/foo"
        pathType: Prefix
        backend:
          service:
            name: landingpage
            port:
              number: 80
